--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,8 +13,9 @@ export(get_kegg_pathway)
 export(get_pathway_class)
 export(metpath_logo)
 export(metpath_packages)
-exportClasses(enrich_result_class)
-exportClasses(pathway_database_class)
+exportClasses(enrich_result)
+exportClasses(pathway_database)
+exportMethods(show)
 import(ggplot2)
 import(ggraph)
 importFrom(KEGGREST,keggGet)
@@ -35,9 +36,10 @@ importFrom(future,multisession)
 importFrom(future,plan)
 importFrom(ggrepel,geom_text_repel)
 importFrom(magrittr,"%>%")
+importFrom(metID,construct_database)
 importFrom(methods,.hasSlot)
 importFrom(methods,new)
-importFrom(metid,construct_database)
+importFrom(methods,show)
 importFrom(openxlsx,write.xlsx)
 importFrom(pbapply,pblapply)
 importFrom(purrr,map)
