--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 S3method("[",pathway_database)
 S3method(filter,pathway_database)
 S3method(length,pathway_database)
+S3method(print,metpath_conflicts)
 export(enrich_bar_plot)
 export(enrich_hmdb)
 export(enrich_kegg)
@@ -15,11 +16,11 @@ export(get_hmdb_pathway)
 export(get_kegg_compound)
 export(get_kegg_pathway)
 export(get_pathway_class)
+export(metpath_conflicts)
 export(metpath_logo)
 export(metpath_packages)
 exportClasses(enrich_result)
 exportClasses(pathway_database)
-exportMethods(show)
 import(ggplot2)
 import(ggraph)
 importFrom(KEGGREST,keggGet)
@@ -42,7 +43,6 @@ importFrom(ggrepel,geom_text_repel)
 importFrom(magrittr,"%>%")
 importFrom(methods,.hasSlot)
 importFrom(methods,new)
-importFrom(methods,show)
 importFrom(metid,construct_database)
 importFrom(openxlsx,write.xlsx)
 importFrom(pbapply,pblapply)
