--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 S3method("[",pathway_database)
 S3method(filter,pathway_database)
 S3method(length,pathway_database)
+S3method(names,pathway_database)
 S3method(print,metpath_conflicts)
 export(enrich_bar_plot)
 export(enrich_hmdb)
@@ -21,6 +22,16 @@ export(metpath_logo)
 export(metpath_packages)
 exportClasses(enrich_result)
 exportClasses(pathway_database)
+exportMethods(compound_list)
+exportMethods(database_info)
+exportMethods(describtion)
+exportMethods(gene_list)
+exportMethods(pathway_class)
+exportMethods(pathway_id)
+exportMethods(pathway_name)
+exportMethods(reference_list)
+exportMethods(related_disease)
+exportMethods(related_module)
 import(ggplot2)
 import(ggraph)
 importFrom(KEGGREST,keggGet)
