--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -6,8 +6,8 @@ articles:
   hmdb_pathway_enrichment: hmdb_pathway_enrichment.html
   kegg_pathway_enrichment: kegg_pathway_enrichment.html
   metpath: metpath.html
-  pathways_database: pathways_database.html
-last_built: 2021-12-27T21:53Z
+  pathway_database: pathway_database.html
+last_built: 2022-01-11T08:30Z
 urls:
   reference: https://tidymass.github.io/metpath/reference
   article: https://tidymass.github.io/metpath/articles
