--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: metpath
 Type: Package
 Title: Pathway analysis for metabolomics data
-Version: 0.0.1
+Version: 0.99.2
 Authors@R: c(
     person(given = "Xiaotao",
            family = "Shen",
@@ -18,7 +18,7 @@ URL: https://github.com/tidymass/metpath
 BugReports: https://github.com/tidymass/metpath/issues
 Encoding: UTF-8
 LazyData: true
-Depends: R (>= 3.5)
+Depends: R (>= 4.1)
 Imports:
     BiocParallel,
     cli,
@@ -51,7 +51,7 @@ Imports:
     tidygraph,
     rlang
 License: GPL-2 | file LICENSE
-RoxygenNote: 7.1.1
+RoxygenNote: 7.1.2
 Suggests: knitr,
     rmarkdown,
     BiocStyle,
@@ -61,4 +61,4 @@ VignetteBuilder: knitr
 Note:
 biocViews: Metabolomics, MassSpectrometry
 Remotes: 
-    tidymass/metid
+    gitlab::jaspershen/metid
