--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,7 +6,11 @@ S3method(filter,pathway_database)
 S3method(length,pathway_database)
 S3method(names,pathway_database)
 S3method(print,metpath_conflicts)
+export(enrich_bar_plot)
+export(enrich_hmdb)
+export(enrich_kegg)
 export(enrich_network)
+export(enrich_scatter_plot)
 export(filter)
 export(filter_pathway)
 export(get_hmdb_compound)
