--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,7 +7,12 @@ S3method(filter,pathway_database)
 S3method(length,pathway_database)
 S3method(names,pathway_database)
 S3method(print,metpath_conflicts)
+export(annotate_isotope)
+export(annotate_metabolites_fpa)
 export(arrange)
+export(calculate_activity_score)
+export(calculate_centrality)
+export(calculate_redundance)
 export(enrich_bar_plot)
 export(enrich_hmdb)
 export(enrich_kegg)
@@ -17,10 +22,19 @@ export(enrich_pathways)
 export(enrich_scatter_plot)
 export(filter)
 export(filter_pathway)
+export(get_hidden_metabolites)
+export(get_null_distribution)
 export(get_pathway_class)
+export(group_peaks_rt)
+export(identify_metabolic_modules)
 export(metpath_conflicts)
 export(metpath_logo)
 export(metpath_packages)
+export(perform_fpa)
+export(plot_metabolic_module_fpa)
+export(plot_metabolic_network_fpa)
+export(remove_redundancy)
+export(score_peak_group)
 exportClasses(enrich_result)
 exportClasses(pathway_database)
 exportMethods(compound_list)
@@ -38,6 +52,8 @@ import(ggraph)
 importClassesFrom(massdataset,tidymass_parameter)
 importFrom(KEGGREST,keggGet)
 importFrom(KEGGREST,keggList)
+importFrom(Rdisop,getIsotope)
+importFrom(Rdisop,getMolecule)
 importFrom(crayon,blue)
 importFrom(crayon,col_align)
 importFrom(crayon,col_nchar)
@@ -55,8 +71,16 @@ importFrom(dplyr,select)
 importFrom(furrr,future_map)
 importFrom(future,multisession)
 importFrom(future,plan)
+importFrom(ggplot2,scale_color_manual)
+importFrom(ggraph,geom_edge_arc)
+importFrom(ggraph,geom_node_point)
+importFrom(ggraph,geom_node_text)
+importFrom(ggraph,ggraph)
+importFrom(ggraph,scale_edge_color_manual)
+importFrom(ggraph,theme_graph)
 importFrom(ggrepel,geom_text_repel)
 importFrom(magrittr,"%>%")
+importFrom(masstools,sum_formula)
 importFrom(methods,.hasSlot)
 importFrom(methods,new)
 importFrom(metid,construct_database)
@@ -71,14 +95,19 @@ importFrom(rlang,quos)
 importFrom(rstudioapi,getThemeInfo)
 importFrom(rstudioapi,hasFun)
 importFrom(rstudioapi,isAvailable)
+importFrom(stats,ecdf)
 importFrom(stats,fisher.test)
 importFrom(stats,p.adjust)
 importFrom(stats,phyper)
+importFrom(stats,rgamma)
+importFrom(stats,rt)
 importFrom(stringr,str_detect)
 importFrom(stringr,str_replace)
 importFrom(stringr,str_replace_all)
 importFrom(stringr,str_split)
 importFrom(stringr,str_trim)
+importFrom(tidygraph,activate)
+importFrom(tidygraph,centrality_degree)
 importFrom(tidygraph,tbl_graph)
 importFrom(utils,data)
 importFrom(utils,head)
