--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -44,7 +44,9 @@ Imports:
     ggrepel,
     tidygraph,
     rlang,
-    massdataset
+    massdataset,
+    Rdisop,
+    masstools
 License: GPL-2 | file LICENSE
 RoxygenNote: 7.3.2
 Suggests: 
@@ -57,6 +59,7 @@ VignetteBuilder: knitr
 Note:
 biocViews: Metabolomics, MassSpectrometry
 Remotes: 
+    gitlab::tidymass/masstools,
     gitlab::tidymass/metid,
     gitlab::tidymass/massdataset
 Config/testthat/edition: 3
