--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,8 +11,12 @@ export(annotate_isotope)
 export(annotate_metabolites_fpa)
 export(arrange)
 export(calculate_activity_score)
+export(calculate_activity_socre)
 export(calculate_centrality)
 export(calculate_redundance)
+export(compound_list)
+export(database_info)
+export(describtion)
 export(enrich_bar_plot)
 export(enrich_hmdb)
 export(enrich_kegg)
@@ -22,34 +26,35 @@ export(enrich_pathways)
 export(enrich_scatter_plot)
 export(filter)
 export(filter_pathway)
+export(gene_list)
+export(generate_null_activity_score_distribution)
 export(get_hidden_metabolites)
-export(get_null_distribution)
 export(get_pathway_class)
 export(group_peaks_rt)
 export(identify_metabolic_modules)
 export(metpath_conflicts)
 export(metpath_logo)
 export(metpath_packages)
+export(pathway_class)
+export(pathway_id)
+export(pathway_name)
 export(perform_fpa)
 export(plot_metabolic_module_fpa)
 export(plot_metabolic_network_fpa)
+export(reference_list)
+export(related_disease)
+export(related_module)
 export(remove_redundancy)
 export(score_peak_group)
 exportClasses(enrich_result)
 exportClasses(pathway_database)
-exportMethods(compound_list)
-exportMethods(database_info)
-exportMethods(describtion)
-exportMethods(gene_list)
-exportMethods(pathway_class)
-exportMethods(pathway_id)
-exportMethods(pathway_name)
-exportMethods(reference_list)
-exportMethods(related_disease)
-exportMethods(related_module)
 import(ggplot2)
 import(ggraph)
+import(igraph)
 importClassesFrom(massdataset,tidymass_parameter)
+importFrom(BiocParallel,MulticoreParam)
+importFrom(BiocParallel,SnowParam)
+importFrom(BiocParallel,bplapply)
 importFrom(KEGGREST,keggGet)
 importFrom(KEGGREST,keggList)
 importFrom(Rdisop,getIsotope)
@@ -79,7 +84,12 @@ importFrom(ggraph,ggraph)
 importFrom(ggraph,scale_edge_color_manual)
 importFrom(ggraph,theme_graph)
 importFrom(ggrepel,geom_text_repel)
+importFrom(grDevices,colorRampPalette)
+importFrom(igraph,V)
+importFrom(igraph,degree)
+importFrom(igraph,shortest_paths)
 importFrom(magrittr,"%>%")
+importFrom(masstools,get_os)
 importFrom(masstools,sum_formula)
 importFrom(methods,.hasSlot)
 importFrom(methods,new)
@@ -99,6 +109,7 @@ importFrom(stats,ecdf)
 importFrom(stats,fisher.test)
 importFrom(stats,p.adjust)
 importFrom(stats,phyper)
+importFrom(stats,quantile)
 importFrom(stats,rgamma)
 importFrom(stats,rt)
 importFrom(stringr,str_detect)
